--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = "0.12.1"
+iced = { version = "0.12.1", features = ["image"] } 
 image = "0.25.1"
