--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 iced = { version = "0.12.1", features = ["image","canvas"] } 
+iced_table = "0.12.0"
 image = "0.25.1"
