--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -8,3 +8,4 @@ iced = { version = "0.12.1", features = ["image","canvas","lazy"] }
 iced_table = "0.12.0"
 iced_widget = "0.12"
 image = "0.25.1"
+native-dialog = "0.7.0"
