--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-std = {version = "1.12.0", features = ["attributes"]}
 csv = "1.3.0"
+csv-async = { version = "1.3.0", features = ["tokio"] }
+futures = "0.3.30"
 iced = { version = "0.12.1", features = ["image","canvas","lazy"] } 
 iced_table = "0.12.0"
 iced_widget = "0.12"
