--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -16,5 +16,6 @@ iced_widget = "0.12"
 image = "0.25.1"
 native-dialog = "0.7.0"
 num-format = "0.4.4"
+regex = "1.10.5"
 serde_json = "1.0.120"
 tokio = { version = "1.38.0", features = ["full"] }
