--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -18,4 +18,5 @@ native-dialog = "0.7.0"
 num-format = "0.4.4"
 regex = "1.10.5"
 serde_json = "1.0.120"
+statistical = "1.0.0"
 tokio = { version = "1.38.0", features = ["full"] }
