--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -15,7 +15,11 @@ iced_table = "0.12.0"
 iced_widget = "0.12"
 image = "0.25.1"
 native-dialog = "0.7.0"
+ndarray = {version = "0.15.6", features = ["rayon"]}
+ndarray-rand = "0.14.0"
 num-format = "0.4.4"
+rand = "0.8.5"
+rayon = "1.10.0"
 regex = "1.10.5"
 serde_json = "1.0.120"
 statistical = "1.0.0"
