--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -9,15 +9,17 @@ chardet = "0.2.4"
 csv = "1.3.0"
 csv-async = { version = "1.3.0", features = ["tokio"] }
 futures = "0.3.30"
-iced = { version = "0.12.1", features = ["image","canvas","lazy","tokio"] } 
+iced = { version = "0.12.1", features = ["image","canvas","lazy","tokio","advanced"] } 
 iced_futures = "0.12.0"
 iced_table = "0.12.0"
 iced_widget = "0.12"
 image = "0.25.1"
+lyon_algorithms = "1.0.4"
 native-dialog = "0.7.0"
 ndarray = {version = "0.15.6", features = ["rayon"]}
 ndarray-rand = "0.14.0"
 num-format = "0.4.4"
+once_cell = "1.19.0"
 rand = "0.8.5"
 rayon = "1.10.0"
 regex = "1.10.5"
