Adding pcs analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 fast_file_flow/target
 fast_file_flow/target/**/*.*
 fast_file_flow/Cargo.lock
-fast_file_flow/output/kmeans_plot.png
+fast_file_flow/output/**/*.*
+
