--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -17,6 +17,7 @@ image = "0.25.1"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
 linfa-datasets = "0.7.0"
+linfa-reduction = "0.7.0"
 lyon_algorithms = "1.0.4"
 native-dialog = "0.7.0"
 ndarray = {version = "0.15.6", features = ["rayon"]}
