--- a/fast_file_flow/Cargo.toml
+++ b/fast_file_flow/Cargo.toml
@@ -16,7 +16,8 @@ iced_widget = "0.12"
 image = "0.25.1"
 linfa = "0.7.0"
 linfa-clustering = "0.7.0"
-linfa-datasets = "0.7.0"
+linfa-datasets = {version = "0.7.0", features =["generate"]}
+linfa-nn = "0.7.0"
 linfa-reduction = "0.7.0"
 lyon_algorithms = "1.0.4"
 native-dialog = "0.7.0"
@@ -30,4 +31,5 @@ rayon = "1.10.0"
 regex = "1.10.5"
 serde_json = "1.0.120"
 statistical = "1.0.0"
+string-builder = "0.2.0"
 tokio = { version = "1.38.0", features = ["full"] }
